# custom-led-controller

./: .gitignore  Leds.py  Managers.py  PATCH_NOTES.md  Pages.py  README.md  Serial.py  UI.py  Variables.py  Visualizer.py  Widgets.py  main.py  pyproject.toml  run_local.py
docs/: architecture.md  roadmap.md
firmware/: README.md  protocol.md
firmware/esp-idf/: CMakeLists.txt
firmware/esp-idf/main/: main.c  protocol.h
src/custom_led_controller/: __main__.py  api.py  config.py  engine.py  models.py  pattern_library.py  patterns.py  runtime.py  storage.py
src/custom_led_controller/static/: app.js  index.html  styles.css
src/custom_led_controller/transports/: base.py  mock.py  serial_transport.py
tests/: test_engine.py  test_models.py  test_patterns.py
